Update: HTML CSS

--- a/project.html
+++ b/project.html
@@ -9,13 +9,12 @@
     </head>
 <body>
     <div class="main_portfolio">
-        <center> <h1 class="name">Pinky jangir</h1>
-            <h1 class="co">You can see my code</h1></center>
+        <h1 class="co">You can see my code</h1>
         <div class="h"> 
             <a href="/index.html">Home</a>
         </div>
         <div class="pr">
-            <a href="/project.html">Projects</a>
+            <strong> <a href="/project.html">Projects</a></strong>
         </div>
         <div class="bl">
             <a href="blog.html">Blog</a>
@@ -223,14 +222,17 @@
             </button>
         </center>
     </div>
-<br>
-<br>         
-            <center><div class="main_portfolio">
-                    <h1 class="name">Social Media</h1>
-                    <div class="sec_link">
-                        <a href="https://github.com/PinkyJangir"><img src="https://img.icons8.com/ios/2x/github--v2.gif" hight="30" width="50"></a>
-                    </div>
-            </center></div>
+    <br>
+    <br>         
+    <div class="main_portfolio">
+        <div class="link">
+            <a href=""><img
+                    src="" hight="30" width="45"></a>
+        </div>
+        <div class="sec_link">
+            <a class="G" href="https://github.com/PinkyJangir"><img src="https://img.icons8.com/ios/2x/github--v2.gif" hight="30" width="50" style="position: relative; left:6rem; top:-1rem;"></a>
+            <h1 class="S">Social Media</h1>
+    </div>
         
 </body>
 </html>
