updating social profiles

--- a/blog.html
+++ b/blog.html
@@ -68,8 +68,9 @@
                     src="" hight="30" width="45"></a>
         </div>
         <div class="sec_link">
-            <a class="G" href="https://github.com/PinkyJangir"><img src="https://img.icons8.com/ios/2x/github--v2.gif" hight="30" width="50" style="position: relative; left:6rem; top:-1rem;"></a>
             <h1 class="S">Social Media</h1>
-    </div>
+            <a class="G" href="https://github.com/PinkyJangir">Github</a>
+            <a class="G" href="https://www.linkedin.com/in/pinky-jangir-a59231228/">Linkdin</a>
+            <a class="G" href="https://twitter.com/PinkyJangir4">Twitter</a>    </div>
 </body>
 </html>
