--- a/project.html
+++ b/project.html
@@ -175,7 +175,7 @@
             <a href="https://cocky-swanson-61e897.netlify.app/triangle.html">Live Project</a>
             </button>
             <button class="button">
-            <a href="https://github.com/PinkyJangir/Neog_Mark.12">View Code</a>
+            <a href="https://github.com/PinkyJangir/Neog_mark12">View Code</a>
             </button>
         </center>
     </div>
@@ -200,7 +200,7 @@
             <h5 class="date">December 2021</h5>
             <h4 class="discreption">In this project i made one app in this Tell the user how much profit or loss he/she is making on a stock.</h4>
             <button class="button">
-            <a href="https://stupefied-davinci-9f194b.netlify.app/">Live Project</a>
+            <a href="https://stockprofitlosspinky.netlify.app/">Live Project</a>
             </button>
             <button class="button">
             <a href="https://github.com/PinkyJangir/Neog_Mark.14">View Code</a>
@@ -230,8 +230,10 @@
                     src="" hight="30" width="45"></a>
         </div>
         <div class="sec_link">
-            <a class="G" href="https://github.com/PinkyJangir"><img src="https://img.icons8.com/ios/2x/github--v2.gif" hight="30" width="50" style="position: relative; left:6rem; top:-1rem;"></a>
             <h1 class="S">Social Media</h1>
+            <a class="G" href="https://github.com/PinkyJangir">Github</a>
+            <a class="G" href="https://www.linkedin.com/in/pinky-jangir-a59231228/">Linkdin</a>
+            <a class="G" href="https://twitter.com/PinkyJangir4">Twitter</a>
     </div>
         
 </body>
