--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,10 @@
             <h2 class="discription">About Rajasthan</h2 >
             <center>
             <div class="line">
-            <h3>Rajasthan is one of the most beautiful states of India. The culture here is famous all over the world. Thar desert, camel ride, Ghoomar and banjara dance and colorful traditional costumes come before our eyes whenever the name of Rajasthan is taken. This state is known for its courteous nature and courteous <br>
+            <h3>Rajasthan is one of the most beautiful states of India. The culture here is famous all over the world. Thar desert, camel ride, Ghoomar and banjara dance and colorful traditional costumes come before our eyes whenever the name of Rajasthan is taken. This state is known for its courteous nature and courteous.
+                In Rajasthan, every festival is celebrated with a big festival or it is lived in brotherhood, which creates a feeling of love or kindness, but every person grows up with respect to everyone else.
+                </h3>
+                <br>
             </center>
             <br>
             <button class="button">
@@ -45,7 +48,10 @@
             <h2 class="discription">About html and css</h2>
             <center>
             <div class="line">
-            <h3>The HyperText Markup Language, or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript and CSS is easy to learn and understand but it provides powerful control over the presentation of an HTML document. Most commonly, CSS is combined with the markup languages HTML or XHTML.<br>
+            <h3>The HyperText Markup Language, or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript and CSS is easy to learn and understand but it provides powerful control over the presentation of an HTML document. Most commonly, CSS is combined with the markup languages HTML or XHTML nad in html and css i used many tags for makin web page and ni also n used to css. this is the only bit of mandatory theory. In order to begin to write HTML, it helps if you know what you are writing.
+           .</h3>
+                
+            <br>
             </center>
             <br>
             <button class="button">
@@ -71,6 +77,7 @@
             <h1 class="S">Social Media</h1>
             <a class="G" href="https://github.com/PinkyJangir">Github</a>
             <a class="G" href="https://www.linkedin.com/in/pinky-jangir-a59231228/">Linkdin</a>
-            <a class="G" href="https://twitter.com/PinkyJangir4">Twitter</a>    </div>
+            <a class="G" href="https://twitter.com/PinkyJangir4">Twitter</a>    
+        </div>
 </body>
 </html>
