--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <button class="button" style="display: block;margin: auto ;"><a href="/project.html">
         see projects</a></button>
     <h1 style="text-align: center;">blogs</h1>
-    <div style="text-align: center;">I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+    <div style="text-align: center;">I am also working on some technical and non techincal blogs. I like to document my journey of learning.And about my culture I feel good because i was mantion my district.
     </div>
-    <button class="button" style="display: block;margin: auto;"><a href="/style.html"> Read blog</a></button>
+    <button class="button" style="display: block;margin: auto;"><a href="/blog.html"> Read blog</a></button>
     <br>
         <div class="main_portfolio">
                 <div class="link">
