--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
         </div>
     <br>
     <br>
-    <div class="project">
+    <div class="project_4">
         <center>
             <h1 class="en">My Portfol021</h5>
             <h5 class="date">December 2021</h5>
@@ -68,7 +68,7 @@
     </div>
     <br>
     <br>
-    <div class="project">
+    <div class="project_1">
         <center>
             <h1 class="en">Blogs</h1>
             <h5 class="date">December 2021</h5>
@@ -82,7 +82,7 @@
         </center>
     </div>
     <br>
-    <div class="project_2">
+    <div class="project_6">
         <center>
             <h1 class="en">Banana Talk</h1>
             <h5 class="date">December 2021</h5>
@@ -128,9 +128,9 @@
         <center>
             <h1 class="en">Good Books</h1>
             <h5 class="date">December 2021</h5>
-            <h4 class="discreption">in this project we made like this when user clicks on genre then show a list of items with your ratings for that genre.</h4>
+            <h4 class="discreption">in this project we made like this when user clicks on genre then show a list of items with your ratings for that genre.i mantioned about javascript and business .</h4>
             <button class="button">
-            <a href="https://dcqz5.csb.app/">Live Project</a>
+            <a href="https://p2r8k.csb.app/">Live Project</a>
             </button>
             <button class="button">
             <a href="https://github.com/PinkyJangir/Neog_mark9">View Code</a>
