--- a/project.html
+++ b/project.html
@@ -62,7 +62,7 @@
             <a href="/">Live Project</a>
             </button>
             <button class="button">
-            <a href="/">View Code</a>
+            <a href="/e">View Code</a>
             </button>
         </center>
     </div>
@@ -133,7 +133,7 @@
             <a href="https://p2r8k.csb.app/">Live Project</a>
             </button>
             <button class="button">
-            <a href="https://github.com/PinkyJangir/Neog_mark9">View Code</a>
+            <a href="https://github.com/PinkyJangir/mark9_goodbooks">View Code</a>
             </button>
         </center>
     </div>
