--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <h1 style="text-align: center;">technologies
     </h1>
-    <div style="text-align: center;">I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hostin
+    <div style="text-align: center;">I'm familiar with HTML, CSS, JavaScript, and Python.
     </div>
     <h1 style="text-align: center;">projects
     </h1>
