--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             </div>
         </center>
     </div>
-    <h1 style="text-align: center;">technologies
+    <h1 style="text-align: center;">Technologies
     </h1>
     <div style="text-align: center;">I'm familiar with HTML, CSS, JavaScript, and Python.
     </div>
-    <h1 style="text-align: center;">projects
+    <h1 style="text-align: center;">Projects
     </h1>
     <div style="text-align: center;" >I like to showcase my work and thus, you can see my projects hosted online
     </div>
     <button class="button" style="display: block;margin: auto ;"><a href="/project.html">
         see projects</a></button>
-    <h1 style="text-align: center;">blogs</h1>
+    <h1 style="text-align: center;">Blogs</h1>
     <div style="text-align: center;">I am also working on some technical and non techincal blogs. I like to document my journey of learning.And about my culture I feel good because i was mantion my district.
     </div>
     <button class="button" style="display: block;margin: auto;"><a href="/blog.html"> Read blog</a></button>
